--- a/f3-traffic-light/web/webhid.html
+++ b/f3-traffic-light/web/webhid.html
@@ -63,6 +63,11 @@
       const REPORT_ID = 0;         // no report ID in descriptor
       const REPORT_LEN_OUT = 2;    // two bytes
 
+      // Behavior flags (can be overridden via URL, e.g., ?auto=1&reopen=1)
+      const params = new URLSearchParams(location.search);
+      const AUTO_OPEN = params.get('auto') !== '0';      // true by default
+      const AUTO_REOPEN_ON_CONNECT = params.get('reopen') !== '0'; // true by default
+
       const el = (id) => document.getElementById(id);
       const status = el('status');
       const logEl = el('log');
@@ -112,6 +117,9 @@
           device = dev;
           log(`Paired: ${dev.productName} (VID:0x${dev.vendorId.toString(16)}, PID:0x${dev.productId.toString(16)})`, 'ok');
           setUI();
+          if (AUTO_OPEN) {
+            await open();
+          }
         } catch (e) {
           log(`Pair canceled or failed: ${e.message}`, 'err');
         }
@@ -171,20 +179,50 @@
       btnSend.addEventListener('click', send);
       quickBtns.forEach(b => b.addEventListener('click', sendQuick));
 
-      // Try to auto-reuse previously granted devices
+      // Try to auto-reuse previously granted devices and auto-open
       (async function init() {
         if (!('hid' in navigator)) {
           log('WebHID not supported in this browser.', 'err');
           status.textContent = 'WebHID unsupported';
           return;
         }
-        const devices = await navigator.hid.getDevices();
-        const dev = devices.find(d => d.vendorId === VID && d.productId === PID);
-        if (dev) {
-          device = dev;
-          setUI();
-          log(`Found previously granted device: ${dev.productName}`);
+        try {
+          const devices = await navigator.hid.getDevices();
+          const dev = devices.find(d => d.vendorId === VID && d.productId === PID);
+          if (dev) {
+            device = dev;
+            setUI();
+            log(`Found previously granted device: ${dev.productName}`);
+            if (AUTO_OPEN && !dev.opened) {
+              await open();
+            }
+          } else {
+            log('No previously granted matching device found. Click "Pair device…" once to grant access.');
+          }
+        } catch (e) {
+          log(`Auto-detect failed: ${e.message}`, 'err');
         }
+
+        // When a matching device is connected later, optionally auto-select and open it.
+        navigator.hid.addEventListener('connect', async (ev) => {
+          const d = ev.device;
+          if (d.vendorId === VID && d.productId === PID) {
+            device = d;
+            setUI();
+            log(`Device connected: ${d.productName}`);
+            if (AUTO_REOPEN_ON_CONNECT) {
+              try { await open(); } catch (e) { /* already logged in open() */ }
+            }
+          }
+        });
+
+        navigator.hid.addEventListener('disconnect', (ev) => {
+          if (device && ev.device === device) {
+            log('Device disconnected');
+            device = null;
+            setUI();
+          }
+        });
       })();
     </script>
 
