Vendor-specific usb with winusb support works; webusb works

--- a/f3-traffic-light/usb-traffic-light.html
+++ b/f3-traffic-light/usb-traffic-light.html
@@ -47,8 +47,8 @@
 
     <script>
       // Update these IDs if you change descriptors (see USB_DEVICE/App/usbd_desc.c)
-      const VID = 1155;   // 0x0483 (STMicroelectronics)
-      const PID = 22352;  // from USBD_PID_FS
+      const VID = 0x1209;   // 0x0483 (STMicroelectronics)
+      const PID = 0xE116;  // from USBD_PID_FS
 
       // Behavior flags (can be overridden via URL, e.g., ?auto=1&reopen=1&if=0&epout=1&epin=1&cfg=1)
       const params = new URLSearchParams(location.search);
