HTML - added example link

--- a/BLE_Custom/ble-traffic-light.html
+++ b/BLE_Custom/ble-traffic-light.html
@@ -49,6 +49,7 @@
     </div>
     <h3>Status</h3>
     <div id="status"></div>
+    <div><a href="./">Examples</a></div>
 
     <script>
       const SERVICE_UUID = "0000fe40-cc7a-482a-984a-7f2ed5b3e58f";
