--- a/f3-traffic-light/hid-traffic-light.html
+++ b/f3-traffic-light/hid-traffic-light.html
@@ -44,6 +44,7 @@
 
     <h3>Log</h3>
     <div id="log" aria-live="polite"></div>
+    <div><a href="./">Examples</a></div>
 
     <script>
       // Update these if you change descriptors (see USB_DEVICE/App/usbd_desc.c)
