--- a/f3-traffic-light/serial-traffic-light.html
+++ b/f3-traffic-light/serial-traffic-light.html
@@ -53,6 +53,7 @@
 
     <h3>Log</h3>
     <div id="log" aria-live="polite"></div>
+    <div><a href="./">Examples</a></div>
 
     <script>
       // Behavior flags (can be overridden via URL, e.g., ?auto=1&reopen=1)
